chore: corrected github config

--- a/src/pages/admin/index.astro
+++ b/src/pages/admin/index.astro
@@ -13,9 +13,7 @@
             name: 'Static CMS',
             backend: {
                 name: 'github',
-                repo: 'staticcms/staticcms.com',
-                branch: 'master',
-                base_url: 'https://api.github.com'
+                repo: 'Defkil/cheatsheet',
             },
             media_folder: '/static/media',
             public_folder: '/media',
