--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,3 @@
 <script is:inline>
-	// Redirect your homepage to the first page of documentation.
-	// If you have a landing page, remove this script and add it here!
-	window.location.pathname = `/en/introduction`;
+	window.location.pathname = `/de/home/`;
 </script>
