feat: removed more menu in the right sidebar

--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -1,6 +1,5 @@
 ---
 import type { MarkdownHeading } from 'astro';
-import MoreMenu from '../RightSidebar/MoreMenu.astro';
 import TableOfContents from '../RightSidebar/TableOfContents';
 
 type Props = {
@@ -9,7 +8,7 @@ type Props = {
 	githubEditUrl: string;
 };
 
-const { title, headings, githubEditUrl } = Astro.props;
+const { title, headings } = Astro.props;
 ---
 
 <article id="article" class="content">
@@ -20,9 +19,6 @@ const { title, headings, githubEditUrl } = Astro.props;
 		</nav>
 		<slot />
 	</section>
-	<nav class="block sm:hidden">
-		<MoreMenu editHref={githubEditUrl} />
-	</nav>
 </article>
 
 <style>
