--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -1,13 +1,13 @@
 ---
-import type { CollectionEntry } from 'astro:content';
-import { SITE, OPEN_GRAPH } from '../consts';
+import type { CollectionEntry } from 'astro:content'
+import { SITE, OPEN_GRAPH } from '../consts'
 
 type Props = { canonicalUrl: URL } & CollectionEntry<'docs'>['data'];
 
-const { ogLocale, image, title, description, canonicalUrl } = Astro.props;
-const formattedContentTitle = `${title} 🚀 ${SITE.title}`;
-const imageSrc = image?.src ?? OPEN_GRAPH.image.src;
-const canonicalImageSrc = new URL(imageSrc, Astro.site);
+const { ogLocale, image, title, description, canonicalUrl } = Astro.props
+const formattedContentTitle = `${title} 🚀 ${SITE.title}`
+const imageSrc = image?.src ?? OPEN_GRAPH.image.src
+const canonicalImageSrc = new URL(imageSrc, Astro.site)
 const imageAlt = image?.alt ?? OPEN_GRAPH.image.alt;
 ---
 
