--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -1,47 +1,45 @@
 ---
-import type { MarkdownHeading } from 'astro';
-import TableOfContents from '../RightSidebar/TableOfContents';
+import type { MarkdownHeading } from 'astro'
+import TableOfContents from '../RightSidebar/TableOfContents'
 
 type Props = {
-	title: string;
-	headings: MarkdownHeading[];
-	githubEditUrl: string;
+  title: string; headings: MarkdownHeading[]; githubEditUrl: string;
 };
 
 const { title, headings } = Astro.props;
 ---
 
 <article id="article" class="content">
-	<section class="main-section">
-		<h1 class="content-title" id="overview">{title}</h1>
-		<nav class="block sm:hidden">
-			<TableOfContents client:media="(max-width: 50em)" headings={headings} />
-		</nav>
-		<slot />
-	</section>
+  <section class="main-section">
+    <h1 class="content-title" id="overview">{title}</h1>
+    <nav class="block sm:hidden">
+      <TableOfContents client:media="(max-width: 50em)" headings={headings}/>
+    </nav>
+    <slot/>
+  </section>
 </article>
 
 <style>
-	.content {
-		padding: 0;
-		max-width: 75ch;
-		width: 100%;
-		height: 100%;
-		display: flex;
-		flex-direction: column;
-	}
+  .content {
+    padding: 0;
+    max-width: 75ch;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
 
-	.content > section {
-		margin-bottom: 4rem;
-	}
+  .content > section {
+    margin-bottom: 4rem;
+  }
 
-	.block {
-		display: block;
-	}
+  .block {
+    display: block;
+  }
 
-	@media (min-width: 50em) {
-		.sm\:hidden {
-			display: none;
-		}
-	}
+  @media (min-width: 50em) {
+    .sm\:hidden {
+      display: none;
+    }
+  }
 </style>
