--- a/src/components/RightSidebar/RightSidebar.astro
+++ b/src/components/RightSidebar/RightSidebar.astro
@@ -1,32 +1,35 @@
 ---
-import type { MarkdownHeading } from 'astro';
-import TableOfContents from './TableOfContents';
+import type { MarkdownHeading } from 'astro'
+import TableOfContents from './TableOfContents'
+import ThemeToggleButton from './ThemeToggleButton'
 
 type Props = {
-	headings: MarkdownHeading[];
-	githubEditUrl: string;
+  headings: MarkdownHeading[];
 };
 
 const { headings } = Astro.props;
 ---
 
 <nav class="sidebar-nav" aria-labelledby="grid-right">
-	<div class="sidebar-nav-inner">
-		<TableOfContents client:media="(min-width: 50em)" headings={headings} />
-	</div>
+  <div class="sidebar-nav-inner">
+    <TableOfContents client:media="(min-width: 50em)" headings={headings}/>
+    <div style="margin-top: 26px;">
+      <ThemeToggleButton client:visible/>
+    </div>
+  </div>
 </nav>
 
 <style>
-	.sidebar-nav {
-		width: 100%;
-		position: sticky;
-		top: 0;
-	}
+  .sidebar-nav {
+    width: 100%;
+    position: sticky;
+    top: 0;
+  }
 
-	.sidebar-nav-inner {
-		height: 100%;
-		padding: 0;
-		padding-top: var(--doc-padding);
-		overflow: auto;
-	}
+  .sidebar-nav-inner {
+    height: 100%;
+    padding: 0;
+    padding-top: var(--doc-padding);
+    overflow: auto;
+  }
 </style>
