feat: first menu cotent

--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -20,10 +20,10 @@ const sidebar = SIDEBAR[langCode];
           <h2 class="nav-group-title">{header}</h2>
           <ul>
             {children.map((child) => {
-              const url = Astro.site?.pathname + child.link
+              const url = child.external ? child.link : Astro.site?.pathname + child.link
               return (
                 <li class="nav-link">
-                  <a href={url} aria-current={currentPageMatch === child.link ? 'page' : false}>
+                  <a href={url} aria-current={currentPageMatch === child.link ? 'page' : false} target={child.external ? '_blank' : '_self'} rel="noreferrer">
                     {child.text}
                   </a>
                 </li>)
