--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -15,7 +15,7 @@ type Props = CollectionEntry<'docs'>['data'] & {
 };
 
 const { headings, ...data } = Astro.props
-const canonicalURL = new URL(Astro.url.pathname, Astro.site)
+const canonicalURL = new URL(Astro.url.pathname, SITE.siteUrl)
 const currentPage = Astro.url.pathname
 const currentFile = `src/content/docs${currentPage.replace(/\/$/, '')}.md`;
 ---
