--- a/src/pages/admin/index.astro
+++ b/src/pages/admin/index.astro
@@ -3,11 +3,21 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://unpkg.com/@staticcms/app@^2.0.0/dist/main.css" />
-    <title>Content Manager</title>
+    <title>cs.1og.de - Content Manager</title>
 </head>
 <body>
 <script src="https://unpkg.com/@staticcms/app@^2.0.0/dist/static-cms-app.js" is:inline></script>
 <script is:inline>
+  const getBasicCollection = (slug, name) => {
+    return {
+      name,
+      label: name,
+      folder: `src/content/docs/de/${slug}`,
+      create: true,
+      slug: '{{slug}}',
+      fields: pageFieldsDefault
+    }
+  }
   const pageFieldsDefault = [
     {
       label: 'Title',
@@ -37,22 +47,9 @@
       media_folder: '/public/media',
       public_folder: '/public',
       collections: [
-        {
-          name: 'base',
-          label: 'Base',
-          folder: 'src/content/docs/de/base',
-          create: true,
-          slug: '{{slug}}',
-          fields: pageFieldsDefault
-        },
-        {
-          name: 'uml',
-          label: 'UML',
-          folder: 'src/content/docs/de/uml',
-          create: true,
-          slug: '{{slug}}',
-          fields: pageFieldsDefault
-        }
+        getBasicCollection('base', 'Base'),
+        getBasicCollection('uml', 'UML'),
+        getBasicCollection('pm', 'Project Management')
       ]
     }
   })
